--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -16,7 +16,6 @@ django-mptt==0.10.0
 django-recaptcha==2.0.5
 django-settings-export==1.2.1
 django-termsandconditions==1.2.15
-django-websocket-redis==0.5.2
 djangocms-column==1.9.0
 djangocms-file==2.3.0
 djangocms-googlemap==1.3.0
@@ -48,4 +47,5 @@ redis==3.3.8
 requests==2.22.0
 rt==1.0.11
 sqlparse==0.3.0
+Twisted[tls,http2]==20.3.0
 uwsgi==2.0.18
