--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,10 +84,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
-    - name: npm install
+    - name: npm ci
       run: |
         cd client
-        npm install
+        npm ci
     - name: Client Side Unit Tests
       run: |
         cd client
@@ -112,10 +112,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
-    - name: npm install
+    - name: npm ci
       run: |
         cd client
-        npm install
+        npm ci
     - name: Client Side Linting
       run: |
         cd client
