Revert "Remove npm caching"
This reverts commit 0f36a2db7a19271687fed69413f6038a14d0dda3.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,13 @@ jobs:
       with:
         node-version: 12.x
 
+    - uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
     - name: npm ci
       run: |
         cd client
@@ -97,6 +104,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
+
+    - uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
     - name: npm ci
       run: |
