--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,8 @@
     "@babel/compat-data": "^7.10.1",
     "@babel/core": "^7.10.1",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.1",
+    "@babel/plugin-proposal-private-methods": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@babel/preset-react": "^7.10.1",
     "@testing-library/jest-dom": "^5.0.2",
