--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -4,10 +4,11 @@
 version: "3"
 services:
   cms:
-    image:  taccwma/frontera-cms:latest
+    image: taccwma/frontera-cms:latest
     volumes:
       - ../cms/secrets.py:/code/taccsite_cms/secrets.py
       - ../cms/uwsgi/uwsgi.ini:/code/uwsgi.ini
+      - ../../cms/static:/code/static
       - ../../cms/media:/code/media
     command: ["uwsgi", "--ini", "uwsgi.ini"]
     container_name: frontera_prtl_cms
