--- a/client/.babelrc
+++ b/client/.babelrc
@@ -9,7 +9,6 @@
         "react-app"
     ],
     "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "react-hot-loader/babel",
+        "react-hot-loader/babel"
     ]
 }
