--- a/client/.babelrc
+++ b/client/.babelrc
@@ -10,6 +10,6 @@
     ],
     "plugins": [
         "@babel/plugin-proposal-class-properties",
-        "react-hot-loader/babel"
+        "react-hot-loader/babel",
     ]
 }
