FP-456: Load Camino/production build of CMS

--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -112,7 +112,7 @@ services:
     container_name: frontera_prtl_workers
 
   docs:
-    image: taccwma/frontera-docs:latest
+    image: taccwma/frontera-docs:latest-master
     volumes:
       - ../../docs:/docs/site
     command: ["mkdocs", "build"]
