--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,9 @@
     "yup": "^0.28.1"
   },
   "scripts": {
-    "lint": "eslint .",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint .",
+    "lint:css": "stylelint '**/*.{css,scss,sass}'",
     "build": "NODE_ENV=production BABEL_ENV=production webpack -p --display-error-details --config webpack.prod.js",
     "test": "jest",
     "test:watch": "npm run test -- --watch",
@@ -105,6 +107,8 @@
     "redux-saga-test-plan": "^4.0.0-rc.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
     "terser-webpack-plugin": "^2.2.2",
     "weak-key": "^1.0.1",
     "webpack": "^4.41.2",
