--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -68,6 +68,7 @@ services:
     image: nginx
     volumes:
       - ../nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ../uwsgi/uwsgi_params:/etc/nginx/uwsgi_params
       - ../nginx/gzip.conf:/etc/nginx/gzip.conf
       - ../nginx/certificates/frontera.dev.crt:/etc/ssl/frontera.dev.crt
       - ../nginx/certificates/frontera.dev.key:/etc/ssl/frontera.dev.key
@@ -82,9 +83,10 @@ services:
     image: taccwma/frontera-portal:local
     volumes:
       - ../../../.:/srv/www/portal
+      - ../nginx/certificates/frontera.dev.crt:/etc/ssl/frontera.dev.crt
+      - ../nginx/certificates/frontera.dev.key:/etc/ssl/frontera.dev.key
     container_name: frontera_prtl_websockets
-    command: ['python', './manage.py', 'runserver', '0.0.0.0:9000']
-    # command: ['daphne -b 0.0.0.0 -p 9000 --fd 0 --access-log - --proxy-headers portal.asgi:application']
+    command: 'daphne -b 0.0.0.0 -p 9000 -e ssl:443:privateKey=/etc/ssl/frontera.dev.key:certKey=/etc/ssl/frontera.dev.crt --root-path=/srv/www/portal/server --access-log - --proxy-headers portal.asgi:application'
 
   django:
     image: taccwma/frontera-portal:local
@@ -92,12 +94,20 @@ services:
       - ../../../.:/srv/www/portal
       - ../../static:/var/www/portal/server/static
       - ../../media:/var/www/portal/server/media
+      - ../nginx/certificates/frontera.dev.crt:/etc/ssl/frontera.dev.crt
+      - ../nginx/certificates/frontera.dev.key:/etc/ssl/frontera.dev.key
+    ports:
+      - 6000:6000
     dns:
       - 8.8.8.8
       - 8.8.4.4
     stdin_open: true
     tty: true
-    command: ['python', './manage.py', 'runserver', '0.0.0.0:6000']
+    # ** NOTE: Run this uwsgi command below to run a uwsgi server instead of http server,
+    # ** matching deployed configurations. You must also edit nginx.conf. Be aware there
+    # ** is no autoreload for local development with this enabled.
+    # command: uwsgi --ini /srv/www/portal/server/conf/uwsgi/uwsgi_core.ini
+    command: python manage.py runserver --noasgi 0.0.0.0:6000
     container_name: frontera_prtl_django
 
   workers:
