--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -80,11 +80,18 @@ http {
             alias /srv/www/portal/server/docs;
         }
 
-        location ~ ^/(core|auth|workbench|tickets|accounts|api|login) {
+        location ~ ^/(core|auth|workbench|tickets|accounts|api|login|webhooks) {
             proxy_pass http://frontera_core;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
+
+            # ** NOTE: Uncomment these lines below to configure a uwsgi server instead of http server,
+            # ** matching deployed configurations. You must also edit docker-compose-dev.all.debug.yml.
+            # uwsgi_read_timeout 60s;
+            # uwsgi_send_timeout 60s;
+            # uwsgi_pass  frontera_core;
+            # include     /etc/nginx/uwsgi_params;
         }
 
         location /ws {
