--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "reactstrap": "^8.2.0",
+    "reconnecting-websocket": "^4.4.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
