--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -13,15 +13,15 @@ events {
 
 http {
 
-    upstream cms {
+    upstream portal_cms {
         server frontera_prtl_cms:8000;
     }
 
-    upstream frontera_core {
+    upstream portal_core {
         server frontera_prtl_django:6000;
     }
 
-    upstream websockets {
+    upstream portal_ws {
         server frontera_prtl_websockets:9000;
     }
 
@@ -65,23 +65,23 @@ http {
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers                 "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
 
+        # gzip on;
+        # gzip_types application/javascript image/* text/css;
+        # gunzip on;
+
         location / {
-            proxy_pass http://cms;
+            proxy_pass http://portal_cms;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
         }
-
-        # gzip on;
-        # gzip_types application/javascript image/* text/css;
-        # gunzip on;
 
         location /user-guide {
             alias /srv/www/portal/server/docs;
         }
 
         location ~ ^/(core|auth|workbench|tickets|accounts|api|login|webhooks) {
-            proxy_pass http://frontera_core;
+            proxy_pass http://portal_core;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
@@ -90,12 +90,12 @@ http {
             # ** matching deployed configurations. You must also edit docker-compose-dev.all.debug.yml.
             # uwsgi_read_timeout 60s;
             # uwsgi_send_timeout 60s;
-            # uwsgi_pass  frontera_core;
+            # uwsgi_pass  portal_core;
             # include     /etc/nginx/uwsgi_params;
         }
 
         location /ws {
-            proxy_pass http://websockets;
+            proxy_pass http://portal_ws;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
