--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -59,9 +59,9 @@ services:
       - frontera_cms_postgres_data:/var/lib/postgresql/data/portal
     container_name: frontera_cms_postgres
     environment:
-      - POSTGRES_PASSWORD=dev
-      - POSTGRES_USER=dev
-      - POSTGRES_DB=dev
+      - POSTGRES_PASSWORD=taccforever
+      - POSTGRES_USER=postgresadmin
+      - POSTGRES_DB=taccsite
       - PGDATA=/var/lib/postgresql/data/portal
 
   nginx:
