--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.1.2",
     "react-table": "^7.0.5",
     "react-table-6": "^6.11.0",
+    "react-transition-group": "^4.4.1",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "reactstrap": "^8.2.0",
