--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -32,6 +32,7 @@ gevent==1.4.0
 ipython==7.8.0
 kombu==4.6.4
 mock==3.0.5
+requests-mock==1.8.0
 paramiko==2.6.0
 psycopg2==2.8.3
 pycryptodome==3.9.0
