--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -38,7 +38,7 @@
         "react/jsx-props-no-spreading": [2, {
             "html": "enforce" ,
             "custom": "enforce",
-            "exceptions": ["input", "Input", "FormField", "Table", "table", "thead", "tbody", "th", "tr", "td", "div"],
+            "exceptions": ["input", "Input", "FormField", "Table", "table", "thead", "tbody", "th", "tr", "td", "div", "Slide"],
             "explicitSpread": "ignore"
         }],
         "prettier/prettier": ["error", { "singleQuote": true }],
