--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -41,7 +41,7 @@ services:
       - ../elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - frontera_prtl_es_data:/usr/share/elasticsearch/data
     container_name: frontera_prtl_elasticsearch
-    ports: 
+    ports:
       - 9200:9200
 
   postgres:
@@ -70,6 +70,7 @@ services:
     image: nginx
     volumes:
       - ../nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ../uwsgi/uwsgi_params:/etc/nginx/uwsgi_params
       - ../nginx/gzip.conf:/etc/nginx/gzip.conf
       - ../nginx/certificates/frontera.dev.crt:/etc/ssl/frontera.dev.crt
       - ../nginx/certificates/frontera.dev.key:/etc/ssl/frontera.dev.key
@@ -84,8 +85,14 @@ services:
     image: taccwma/frontera-portal:local
     volumes:
       - ../../../.:/srv/www/portal
+      - ../nginx/certificates/frontera.dev.crt:/etc/ssl/frontera.dev.crt
+      - ../nginx/certificates/frontera.dev.key:/etc/ssl/frontera.dev.key
     container_name: frontera_prtl_websockets
-    command: "uwsgi --chdir /srv/www/portal/server --gevent 1000 --workers=2 --http-websockets  --http-socket=:9000 --module portal.wsgi_websocket:application"
+    # ** NOTE: Run this daphne command below to run a production-ready daphne server,
+    # ** matching deployed configurations. Be aware there is no autoreload for local
+    # ** development with this enabled.
+    # command: 'daphne -b 0.0.0.0 -p 9000 -e ssl:443:privateKey=/etc/ssl/frontera.dev.key:certKey=/etc/ssl/frontera.dev.crt --root-path=/srv/www/portal/server --access-log - --proxy-headers portal.asgi:application'
+    command: 'python manage.py runserver 0.0.0.0:9000'
 
   django:
     image: taccwma/frontera-portal:local
@@ -98,7 +105,11 @@ services:
       - 8.8.4.4
     stdin_open: true
     tty: true
-    command: ['python', './manage.py', 'runserver', '0.0.0.0:6000']
+    # ** NOTE: Run this uwsgi command below to run a uwsgi server instead of http server,
+    # ** matching deployed configurations. You must also edit nginx.conf. Be aware there
+    # ** is no autoreload for local development with this enabled.
+    # command: uwsgi --ini /srv/www/portal/server/conf/uwsgi/uwsgi_core.ini
+    command: python manage.py runserver --noasgi 0.0.0.0:6000
     container_name: frontera_prtl_django
 
   workers:
