--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -13,12 +13,16 @@ events {
 
 http {
 
-    upstream cms {
+    upstream portal_cms {
         server frontera_prtl_cms:8000;
     }
 
-    upstream frontera_core {
+    upstream portal_core {
         server frontera_prtl_django:6000;
+    }
+
+    upstream portal_ws {
+        server frontera_prtl_websockets:9000;
     }
 
     include       /etc/nginx/mime.types;
@@ -49,7 +53,7 @@ http {
 
         charset utf-8;
 
-        client_max_body_size 2G;
+        client_max_body_size 500M;
 
         # Extra slashes matter to Agave
         merge_slashes off;
@@ -61,83 +65,59 @@ http {
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers                 "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
 
-    location / {
-        proxy_pass http://cms;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+        # gzip on;
+        # gzip_types application/javascript image/* text/css;
+        # gunzip on;
 
-#   gzip on;
-#   gzip_types application/javascript image/* text/css;
-#   gunzip on;
+        location / {
+            proxy_pass http://portal_cms;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
 
-    location /user-guide {
-         alias /srv/www/portal/server/docs;
-    }
+        location /user-guide {
+            alias /srv/www/portal/server/docs;
+        }
 
-    location /auth {
-        proxy_pass http://frontera_core;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+        location ~ ^/(core|auth|workbench|tickets|accounts|api|login|webhooks) {
+            proxy_pass http://portal_core;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
 
-    location /workbench {
-        proxy_pass http://frontera_core;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+            # ** NOTE: Uncomment these lines below to configure a uwsgi server instead of http server,
+            # ** matching deployed configurations. You must also edit docker-compose-dev.all.debug.yml.
+            # uwsgi_read_timeout 60s;
+            # uwsgi_send_timeout 60s;
+            # uwsgi_pass  portal_core;
+            # include     /etc/nginx/uwsgi_params;
+        }
 
-    location /tickets {
-        proxy_pass http://frontera_core;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+        location /ws {
+            proxy_pass http://portal_ws;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
 
-    location /accounts {
-        proxy_pass http://frontera_core;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
+        }
 
-    location /api {
-        proxy_pass http://frontera_core;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+        location /core/media  {
+            alias /srv/www/portal/server/static;
+        }
 
-    location /login {
-        proxy_pass http://frontera_core;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-    location /core/media  {
+        location /core/static {
         alias /srv/www/portal/server/static;
-    }
+        }
 
-    location /core/static {
-       alias /srv/www/portal/server/static;
-    }
-
-    location /build {
-       alias /srv/www/portal/server/static/build;
-    }
-
-    location /core {
-        proxy_pass http://frontera_core;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-
+        location /build {
+        alias /srv/www/portal/server/static/build;
+        }
 
         location /media  {
             alias /srv/www/portal/server/cms/media;
@@ -153,16 +133,6 @@ http {
 
         location /robots.txt {
             alias /ssrv/www/portal/server/static/robots.txt;
-        }
-
-        location /ws {
-            include     /etc/nginx/uwsgi_params;
-            proxy_pass http://websockets:9000/ws;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_redirect off;
-            proxy_read_timeout 86400;
         }
     }
 
