--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -10,7 +10,7 @@ services:
       - ../cms/uwsgi/uwsgi.ini:/code/uwsgi.ini
       - ../../cms/static:/code/static
       - ../../cms/media:/code/media
-    command: ["uwsgi", "--ini", "uwsgi.ini"]
+    command: python manage.py runserver 0.0.0.0:8000
     container_name: frontera_prtl_cms
 
   redis:
