--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "html-react-parser": "^0.10.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
+    "mock-socket": "^9.0.3",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
