--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -38,6 +38,7 @@ channels-redis = "^3.1.0"
 pytest-asyncio = "^0.14.0"
 twisted = "^20.3.0"
 requests-mock = "^1.8.0"
+pytas = {git = "https://bitbucket.org/taccaci/pytas.git", rev = "update-reqs"}
 
 [tool.poetry.dev-dependencies]
 mock = "^4.0.2"
