poc of pip installable core apps
This pattern facilitates overriding or extending existing functionality without directly modifing the core apps or having to fork/clone the entire code-base.

this also lets other devs pull the apps for use in their own projects independent of a "portal" so they can build their own gateway solutions

To run, make build, make start, npm ci, npm build, and run migrations, the last step is only for the poc

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -52,3 +52,4 @@ rt==1.0.11
 sqlparse==0.3.0
 Twisted[tls,http2]==20.3.0
 uwsgi==2.0.18
+file:///tmp/core_apps_accounts-0.1.tar.gz#egg=core_apps_accounts
