--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -2,7 +2,7 @@
 name = "portal-backend"
 version = "1.0.0"
 description = "Django backend for the core portal."
-authors = ["Sal Tijerina <r.sal.tijerina@gmail.com>"]
+authors = ["TACC-WMA <wma-portals@tacc.utexas.edu>"]
 
 [tool.poetry.dependencies]
 Django = "^2.2.13"
@@ -38,7 +38,7 @@ channels-redis = "^3.1.0"
 pytest-asyncio = "^0.14.0"
 twisted = "^20.3.0"
 requests-mock = "^1.8.0"
-pytas = {git = "https://bitbucket.org/taccaci/pytas.git", rev = "update-reqs"}
+pytas = {git = "https://bitbucket.org/taccaci/pytas.git", tag = "v1.5.0"}
 
 [tool.poetry.dev-dependencies]
 mock = "^4.0.2"
