--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.0",
     "bowser": "^2.9.0",
     "cross-fetch": "^3.0.4",
+    "dompurify": "^2.2.2",
     "formik": "^2.1.1",
     "html-react-parser": "^0.10.0",
     "js-cookie": "^2.2.1",
