--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -36,6 +36,7 @@ channels-redis = "^3.1.0"
 pytest-asyncio = "^0.14.0"
 twisted = "^20.3.0"
 pytas = {git = "https://bitbucket.org/taccaci/pytas.git", tag = "v1.5.0"}
+gevent = "^20.9.0"
 
 [tool.poetry.dev-dependencies]
 mock = "^4.0.2"
