FP-363: Add latest core-cms image tag
For frontera-tech-docs repo,
branch task/FP-363-consistent-header-templates

--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -125,7 +125,7 @@ services:
     container_name: frontera_prtl_workers
 
   docs:
-    image: taccwma/frontera-docs:latest-master
+    image: taccwma/frontera-docs:8849bc2
     volumes:
       - ../../docs:/docs/site
     command: ["mkdocs", "build"]
