--- a/server/conf/elasticsearch/elasticsearch.yml
+++ b/server/conf/elasticsearch/elasticsearch.yml
@@ -13,3 +13,4 @@ discovery.zen.minimum_master_nodes: 1
 #More info about memory_lock: https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-configuration-memory.html
 bootstrap.memory_lock: true
 xpack.security.enabled: false
+reindex.remote.whitelist: ['wma-es-client.tacc.utexas.edu:9200']
