--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -41,6 +41,7 @@ google-auth = "^1.23.0"
 google-auth-oauthlib = "^0.4.2"
 google-api-python-client = "^1.12.5"
 jsonpickle = "^1.4.1"
+python-magic = "^0.4.18"
 
 [tool.poetry.dev-dependencies]
 mock = "^4.0.2"
