--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -80,7 +80,7 @@ http {
             alias /srv/www/portal/server/docs;
         }
 
-        location ~ ^/(core|auth|workbench|tickets|accounts|api|login|webhooks) {
+        location ~ ^/(core|auth|workbench|tickets|public-data|accounts|api|login|webhooks) {
             proxy_pass http://portal_core;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
