Task/fp 363 consistent header templates (#60)
* WIP: FP-363: (Untested) Extract cms & portal html

* FP-363: Fix paths and remove unsupported newlines

* FP-363: Document `server/` dir

* FP-363: Link to doc. Remove wrong role. New line.

* Bug/fp 468 load latest cms header styles (#66)

* FP-456: Load CMS header styles at latest location
* FP-456: Add `/server/README.md` (to guide others)
* FP-456: Link to relevant conf doc
* FP-456: Docker-compose: use compatible services
* FP-456: Update to __latest__ CMS commit

I interpret this branch as consistent with the goal of FP-363, because all sites (portal, cms, tech docs) should consistently use the same header css (and FP-468 fixes the bug of them not doing so).

* Noop: Add an RFE comment

* FP-363: Mirror unexpected CMS branding refactor: 1

* FP-363: Mirror unexpected CMS branding refactor: 2

* FP-363: Mirror unexpected CMS branding refactor: 3

* FP-363: Mirror unexpected CMS branding refactor: 4

* Quick: Fix pylint errors in `secrets.sample.py`

* Quick: 2 unused files (comment and delete)

- comment in unused file
- delete the other unused file

* FP-363: Mirror unexpected CMS branding refactor: 5

* FP-363: Update tag for CMS image

* FP-363: Add temp step to fix missing CMS assets

* FP-363: Mirror unexpected CMS branding refactor: 6

* FP-363: Update recently added (temp) CMS asset

* FP-363: Mirror continued CMS config refactor

* FP-363: Quick: Try to fix server-side linting

* FP-363: Quick: Fix Flake8 lint issue

* FP-363: Revert a CMS secret to match Portal need

* FP-363: Fix lint issue (again) CMS sample secret

* FP-363: Fix lint issue (again) CMS sample secret

* FP-363: frontera-docs use latest build (a revert)

* FP-363: Update shimmed CMS assets

* FP-363: Do not provide CMS asset shim

* FP-363: Update based on latest Core CMS `master`

* Noop: Sample secrets title update

* FP-363: Update paths to assets (and a comment)

* F

--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -4,7 +4,7 @@
 version: "3"
 services:
   cms:
-    image: taccwma/frontera-cms:445ec0e
+    image: taccwma/frontera-cms:c0173cc
     volumes:
       - ../cms/secrets.py:/code/taccsite_cms/secrets.py
       - ../cms/uwsgi/uwsgi.ini:/code/uwsgi.ini
@@ -61,9 +61,9 @@ services:
       - frontera_cms_postgres_data:/var/lib/postgresql/data/portal
     container_name: frontera_cms_postgres
     environment:
-      - POSTGRES_PASSWORD=dev
-      - POSTGRES_USER=dev
-      - POSTGRES_DB=dev
+      - POSTGRES_PASSWORD=taccforever
+      - POSTGRES_USER=postgresadmin
+      - POSTGRES_DB=taccsite
       - PGDATA=/var/lib/postgresql/data/portal
 
   nginx:
@@ -125,7 +125,7 @@ services:
     container_name: frontera_prtl_workers
 
   docs:
-    image: taccwma/frontera-docs:latest-master
+    image: taccwma/frontera-docs:8849bc2
     volumes:
       - ../../docs:/docs/site
     command: ["mkdocs", "build"]
