--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -37,6 +37,11 @@ pytest-asyncio = "^0.14.0"
 twisted = "^20.3.0"
 pytas = {git = "https://bitbucket.org/taccaci/pytas.git", tag = "v1.5.0"}
 gevent = "^20.9.0"
+google-auth = "^1.23.0"
+google-auth-oauthlib = "^0.4.2"
+google-api-python-client = "^1.12.5"
+jsonpickle = "^1.4.1"
+python-magic = "^0.4.18"
 
 [tool.poetry.dev-dependencies]
 mock = "^4.0.2"
