--- a/camino/prod.env
+++ b/camino/prod.env
@@ -4,3 +4,4 @@ CAMINO_VERSION=v2.0.0
 COMPOSE_FILE=docker-compose.prod.override.yml
 CMS_TAG=019950e
 PORTAL_TAG=91a9487
+HOST=prod.cep.tacc.utexas.edu
