add host user; common.env

--- a/camino/dev.env
+++ b/camino/dev.env
@@ -1,7 +1,5 @@
-CMS_IMAGE=taccwma/core-cms
-PORTAL_IMAGE=taccwma/core-portal
 CAMINO_VERSION=v2.0.0
 COMPOSE_FILE=docker-compose.dev.override.yml
 CMS_TAG=latest
 PORTAL_TAG=latest
-HOST=dev.cep.tacc.utexas.edu
+HOST=portal@dev.cep.tacc.utexas.edu
