--- a/camino/prod.env
+++ b/camino/prod.env
@@ -1,7 +1,5 @@
-CMS_IMAGE=taccwma/core-cms
-PORTAL_IMAGE=taccwma/core-portal
 CAMINO_VERSION=v2.0.0
 COMPOSE_FILE=docker-compose.prod.override.yml
 CMS_TAG=019950e
 PORTAL_TAG=91a9487
-HOST=prod.cep.tacc.utexas.edu
+HOST=portal@prod.cep.tacc.utexas.edu
