update host var name

--- a/camino/dev.env
+++ b/camino/dev.env
@@ -2,4 +2,4 @@ CAMINO_VERSION=v2.0.0
 COMPOSE_FILE=docker-compose.dev.override.yml
 CMS_TAG=latest
 PORTAL_TAG=latest
-HOST=portal@dev.cep.tacc.utexas.edu
+SSH_HOST=portal@dev.cep.tacc.utexas.edu
