--- a/camino/prod.env
+++ b/camino/prod.env
@@ -2,4 +2,4 @@ CAMINO_VERSION=v2.0.0
 COMPOSE_FILE=docker-compose.prod.override.yml
 CMS_TAG=019950e
 PORTAL_TAG=91a9487
-HOST=portal@prod.cep.tacc.utexas.edu
+SSH_HOST=portal@prod.cep.tacc.utexas.edu
