--- a/camino/dev.env
+++ b/camino/dev.env
@@ -1,4 +1,4 @@
-CAMINO_VERSION=v2.0.0
+CAMINO_VERSION=update-docker-compose
 COMPOSE_FILE=docker-compose.dev.override.yml
 CMS_TAG=latest
 PORTAL_TAG=latest
