--- a/server/conf/docker/docker-compose.yml
+++ b/server/conf/docker/docker-compose.yml
@@ -7,6 +7,6 @@ services:
         context: ../../../.
         dockerfile: server/conf/docker/Dockerfile
         target: development
-      image: taccwma/frontera-portal:local
+      image: taccwma/core-portal:local
       command: /bin/bash
-      container_name: frontera_prtl_django
+      container_name: core_prtl_django
