--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dropzone": "^10.2.1",
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.2.1",
+    "react-resize-detector": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-table": "^7.0.5",
     "react-table-6": "^6.11.0",
