--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -14,15 +14,15 @@ events {
 http {
 
     upstream portal_cms {
-        server core_prtl_cms:8000;
+        server core_portal_cms:8000;
     }
 
     upstream portal_core {
-        server core_prtl_django:6000;
+        server core_portal_django:6000;
     }
 
     upstream portal_ws {
-        server core_prtl_websockets:9000;
+        server core_portal_websockets:9000;
     }
 
     include       /etc/nginx/mime.types;
