task/FP-836: Rename Frontera-Portal repo to Core-Portal (#329)
* add camino config; update docker-compose

* add hosts

* add host user; common.env

* update cert paths

* update cert paths

* disable branch tags

* update host var name

* update camino version

* add comment

* rename frontera to cep

* remove references to frontera

* change commented url

* Update client/src/components/FeedbackForm/FeedbackForm.js

Co-authored-by: W. Bomar <62723358+tacc-wbomar@users.noreply.github.com>

* Update README.md

Co-authored-by: W. Bomar <62723358+tacc-wbomar@users.noreply.github.com>

* remove unneeded files

* rename core_prtl to core_portal; remove unused settings

Co-authored-by: W. Bomar <62723358+tacc-wbomar@users.noreply.github.com>

--- a/server/conf/docker/docker-compose.yml
+++ b/server/conf/docker/docker-compose.yml
@@ -1,12 +1,12 @@
 # This compose file is useful for testing https
 ---
-version: "3"
+version: "3.8"
 services:
     django:
       build:
         context: ../../../.
         dockerfile: server/conf/docker/Dockerfile
         target: development
-      image: taccwma/frontera-portal:local
+      image: taccwma/core-portal:local
       command: /bin/bash
-      container_name: frontera_prtl_django
+      container_name: core_portal_django
