--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -14,15 +14,15 @@ events {
 http {
 
     upstream portal_cms {
-        server frontera_prtl_cms:8000;
+        server core_portal_cms:8000;
     }
 
     upstream portal_core {
-        server frontera_prtl_django:6000;
+        server core_portal_django:6000;
     }
 
     upstream portal_ws {
-        server frontera_prtl_websockets:9000;
+        server core_portal_websockets:9000;
     }
 
     include       /etc/nginx/mime.types;
@@ -58,8 +58,8 @@ http {
         # Extra slashes matter to Agave
         merge_slashes off;
 
-        ssl_certificate             /etc/ssl/frontera.dev.crt;
-        ssl_certificate_key         /etc/ssl/frontera.dev.key;
+        ssl_certificate             /etc/ssl/cep.dev.crt;
+        ssl_certificate_key         /etc/ssl/cep.dev.key;
         ssl_dhparam                 /etc/ssl/dhparam.pem;
         ssl_prefer_server_ciphers   on;
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
