--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: CI
 
-# Controls when the action will run. Triggers the workflow on pushes to master or on pull request events
+# Controls when the action will run. Triggers the workflow on pushes to main or on pull request events
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
     branches: [ '**' ]
 
@@ -81,9 +81,9 @@ jobs:
     - name: Server-Side Linting
       run: |
         cd server
-        git fetch origin "+refs/heads/master:refs/remotes/origin/master"
-        git diff -U0 origin/master..HEAD | poetry run flake8 --diff
-#         poetry run pylint --rcfile=server/.pylintrc $(git diff origin/master..HEAD --name-only "*.py")
+        git fetch origin "+refs/heads/main:refs/remotes/origin/main"
+        git diff -U0 origin/main..HEAD | poetry run flake8 --diff
+#         poetry run pylint --rcfile=server/.pylintrc $(git diff origin/main..HEAD --name-only "*.py")
 
   Client_Side_Unit_Tests:
     runs-on: ubuntu-18.04
