Build/install client during CI to generate templates

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,23 @@ jobs:
         cd server
         poetry install
 
+    - name: Setup Node.js for template generation
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+
+    - uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
+    - name: npm ci 
+      run: |
+        cd client
+        npm ci
+
     - name: Run Server-side unit tests and generate coverage report
       run: |
         cd server
