Refactor github actions to client install is defined in standalone action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,22 +37,11 @@ jobs:
         cd server
         poetry install
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
+    - uses: ./.github/actions/install-client-dependencies.yml
 
     - name: Build client for template generation
       run: |
         cd client
-        npm ci
         npm run build
 
     - name: Run Server-side unit tests and generate coverage report
@@ -107,27 +96,11 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Node.js for use with actions
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
-    - name: npm ci
-      run: |
-        cd client
-        npm ci
+    - uses: ./.github/actions/install-client-dependencies.yml
     - name: Client Side Unit Tests
       run: |
         cd client
         npm run test
-
     - name: Upload coverage to Codecov
       run: bash <(curl -s https://codecov.io/bash) -Z -t ${{ secrets.CODECOV_TOKEN }} -cF javascript
 
@@ -135,22 +108,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Node.js for use with actions
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
-    - name: npm ci
-      run: |
-        cd client
-        npm ci
+    - uses: ./.github/actions/install-client-dependencies.yml
     - name: Client Side Linting
       run: |
         cd client
