--- a/.github/actions/install-client-dependencies.yml
+++ b/.github/actions/install-client-dependencies.yml
@@ -2,6 +2,7 @@ name: "Install client software dependencies"
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
         node-version: 12.x
