--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,27 +37,10 @@ jobs:
         cd server
         poetry install
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
-    - name: Build client for template generation
-      run: |
-        cd client
-        npm ci
-        npm run build
-
     - name: Run Server-side unit tests and generate coverage report
       run: |
         cd server
+        cp server/portal/apps/workbench/templates/portal/apps/workbench/index.j2 server/portal/apps/workbench/templates/portal/apps/workbench/index.html
         poetry run pytest --cov-config=.coveragerc --cov=portal --cov-report=xml -ra
 
     - name: Upload coverage to Codecov
